--- a/oj-client/src/app/components/navbar/navbar.component.html
+++ b/oj-client/src/app/components/navbar/navbar.component.html
@@ -20,19 +20,19 @@
       <ul class="navbar-nav ml-auto">
 
         <li>
-        <button type="button" class="btn btn-primary">Sign in</button>
+        <button type="button" class="btn btn-primary" (click) = "login()">Sign In</button>
         </li>
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          {{username}}
+            {{username}}
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">My Profile</a>
+              <a class="dropdown-item" [routerLink]="['/profile']">My Profile</a>
               <a class="dropdown-item" href="#">My Favourite</a>
               <a class="dropdown-item" href="#">My Submission</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#" >Logout</a>
+              <a class="dropdown-item" href="#" (click) = "logout()" >Logout</a>
           </div>
         </li>
 
