Created executor server with Flask and docker client

--- a/oj-client/src/app/components/problem-detail/problem-detail.component.html
+++ b/oj-client/src/app/components/problem-detail/problem-detail.component.html
@@ -1,8 +1,8 @@
-<div classs="container" *ngIf="problem">
-  <div class="col-xs-12 col-d-4">
+<div class="container" *ngIf="problem">
+  <div id="problem-detail">
     <div>
       <h2>
-        {{problem.id}}.{{problem.name}}
+        {{problem.id}} . {{problem.name}}
       </h2>
       <p>
         {{problem.desc}}
