--- a/oj-client/src/app/components/editor/editor.component.html
+++ b/oj-client/src/app/components/editor/editor.component.html
@@ -1,4 +1,4 @@
-
+<div class="container">
 <section>
   <header class="editor-header">
     <select class="form-control pull-left lang-select" id="language" name="language" [(ngModel)]="language" (change)="setLanguage(language)">
@@ -47,3 +47,4 @@
     <button type="button" class="btn btn-success pull-right" (click)="submit()">Submit Solution</button>
   </footer>
 </section>
+</div>
