--- a/oj-client/src/app/components/navbar/navbar.component.html
+++ b/oj-client/src/app/components/navbar/navbar.component.html
@@ -6,8 +6,8 @@
     </button>
 
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2" >
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <form class="form-inline my-2 my-lg-0" (ngSubmit)="searchProblem()">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" [formControl]="searchBox">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
@@ -20,11 +20,12 @@
       <ul class="navbar-nav ml-auto">
 
         <li>
-        <button type="button" class="btn btn-primary" (click) = "login()">Sign In</button>
+        <button type="button" class="btn btn-primary" *ngIf="!auth.isAuthenticated()" (click) = "login()">Sign In</button>
         </li>
 
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" *ngIf="auth.isAuthenticated()">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <img class= "navbar-icon" src={{avator}}>
             {{username}}
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
